Fixed alignment issue with the button and streak text

--- a/src/index.css
+++ b/src/index.css
@@ -27,13 +27,14 @@ body {
 
 .habit {
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
   /* height: 50px; */
 }
 
 .streak {
   display: flex;
+  align-items: center;
 }
 
 .editHabit {
